# fsqd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  justfile  pyproject.toml
.github/workflows/: docker-publish.yml  docker.yml
cmd/server/: main.go
data/: queue.json
fsqd/: __init__.py  config.py  download.py  log.py  main.py  metadata.py  storage.py
internal/config/: config.go
internal/download/: downloader.go
internal/handler/: handler.go
internal/models/: models.go
internal/storage/: storage.go
internal/utils/: utils.go
internal/websocket/: hub.go
scripts/: inject_version.py  version.py
static/: index.html
templates/: queue.html
