[project]
name = "fsqd"
version = "1.1.2"
description = "Web UI for queuing downloads from fasthare.cloud"
authors = [
    { name = "Boris", email = "boris@example.com" }
]
dependencies = [
    "aiohttp",
    "aiohttp-jinja2>=1.6",
    "bs4",
    "diskcache>=5.6.3",
    "pre-commit",
    "requests",
]
requires-python = ">=3.10"

[project.scripts]
fsqd = "fsqd.main:main"
